# LinguaMate

./: .gitignore  README.md  pyproject.toml
src/: log.py  main.py  run_crawl.py
src/agents/: chatter.py  grammar.py  grammar_checker.py  grammer_checker.py  learning.py  learning_assistant.py  news.py  word_hint.py
src/cache/: image.py  question.py  user_state.py
src/clients/feishu/: base.py  message.py
src/config/: dev.py
src/controllers/: event.py  event_handler.py  event_processer.py
src/controllers/commands/: base.py  defalult_command_handler.py  explain_command_handler.py  learn_command_handler.py
src/controllers/handlers/: base.py  reaction_handler.py  text_message_handler.py
src/crawl/: data_collector.py  data_observer.py  db_observer.py
src/crawl/data_sources/: source_interface.py
src/crawl/data_sources/rss/: hacker_news.py
src/db/: __init__.py
src/db/mongo/: base.py  dialog.py
src/llm/: chat.py
src/storage/: __init__.py
src/storage/mongo/: dialog.py  news.py
src/utils/: date.py  http_utils.py  response.py  sd.py  tts.py
