[project]
name = "linguamate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chattts>=0.2.3",
    "feedparser>=6.0.11",
    "html2text>=2024.2.26",
    "json-repair>=0.39.1",
    "lark-oapi>=1.4.10",
    "litellm>=1.61.15",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pymongo>=4.11.1",
    "python-dotenv>=1.0.1",
    "socksio>=1.0.0",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "volcengine-python-sdk[ark]>=1.0.126",
]
